--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ body {
     border-bottom-right-radius: 15px;
     background-color: #06AED5;
     color: white;
+    font-size: 30px;
   }
   
   .saveBtn i:hover {
